--- a/scss/elements/_programmation.scss
+++ b/scss/elements/_programmation.scss
@@ -60,7 +60,25 @@
   font-weight: $fw-bold;
 }
 
+.programmation .programmation-infos table {
 
+  width: 100%;
+  border-collapse: collapse;
+  border-bottom: 1px solid $grey;
+
+  tr {
+    border-bottom: 1px solid $grey;
+  }
+
+  td {
+    padding: 24px 0;
+  }
+
+  td span {
+   display: block;
+  }
+
+}
 
 
 
@@ -79,6 +97,21 @@
     padding: 30px 0;
 
     height: 260px;
+  }
+
+  .programmation .programmation-infos table {
+
+    tr {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    td {
+      text-align: center;
+      padding: 16px 0;
+    }
+  
   }
 
 }
