--- a/scss/elements/_banner.scss
+++ b/scss/elements/_banner.scss
@@ -111,7 +111,7 @@
 @media screen and (max-width: $vw-middle-small) {
 
 .banner .banner-content {
-  display: block;
+  // display: block;
   width: 100%;
   padding-top: 80px;
 }
