--- a/scss/elements/_fiche.scss
+++ b/scss/elements/_fiche.scss
@@ -120,10 +120,12 @@
   .fiche .fiche-content .fiche-img {
     width: 100%;
     max-width: 500px;
+    margin-bottom: 0px;
   }
 
   .fiche .fiche-content .fiche-texte {
     margin-top: 32px;
+    margin-left: 0;
     width: 100%;
   }
 
