--- a/scss/elements/_footer.scss
+++ b/scss/elements/_footer.scss
@@ -148,6 +148,18 @@ footer .badge {
 
 @media screen and (max-width: $vw-middle-small) {
 
+  footer {
+    padding-top: 40px;
+  }
+
+  footer .footer-social > div:last-of-type {
+    margin-top: 40px;
+}
+
+footer > .wrapper > div {
+  margin-bottom: 40px;
+}
+  
   footer form input {
     width: 100%;
   }
@@ -159,7 +171,7 @@ footer .badge {
     flex-direction: column;
     align-items: center;
 
-    margin: 50px 0;
+    margin: 0px 0;
   }
 
 }
