--- a/scss/elements/_programmation.scss
+++ b/scss/elements/_programmation.scss
@@ -84,6 +84,10 @@
 
 @media screen and (max-width: $vw-middle) {
 
+  .page {
+    margin-top: 40px;
+  }
+
   .programmation .programmation-dates div {
     margin: 0 0;
   }
@@ -112,6 +116,14 @@
       padding: 16px 0;
     }
   
+  }
+
+}
+
+@media screen and (max-width: $vw-middle-small) {
+
+  .page {
+    margin-top: 20px;
   }
 
 }
