--- a/scss/_styles.scss
+++ b/scss/_styles.scss
@@ -1,49 +1,48 @@
 
 
 // GENERIC
-@import "generic/_reset";
+@use "generic/_reset";
 
 // TOOLS
-@import "tools/_fonctions";
+@use "tools/_fonctions";
 
 // SETTINGS
-@import "settings/_global";
-@import "settings/_dimensions";
-@import "settings/_fonts";
-@import "settings/_colors";
+@use "settings/_global";
+@use "settings/_dimensions";
+@use "settings/_fonts";
+@use "settings/_colors";
 
 
 // ELEMENTS
-@import "elements/_headings";
-@import "elements/_banner";
-@import "elements/_programmation";
-@import "elements/_invites";
-@import "elements/_fiche";
-@import "elements/_ticket";
-@import "elements/_commanditaires";
-@import "elements/_images";
-@import "elements/_links";
-@import "elements/_body";
-@import "elements/_wrapper";
-@import "elements/_header";
-@import "elements/_navigation";
-@import "elements/_footer";
-@import "elements/_article";
-@import "elements/_carrousel";
-@import "elements/_formulaire";
-@import "elements/_index";
-@import "elements/_fiche";
-@import "elements/_section";
+@use "elements/_headings";
+@use "elements/_banner";
+@use "elements/_programmation";
+@use "elements/_invites";
+@use "elements/_fiche";
+@use "elements/_ticket";
+@use "elements/_commanditaires";
+@use "elements/_images";
+@use "elements/_links";
+@use "elements/_body";
+@use "elements/_wrapper";
+@use "elements/_header";
+@use "elements/_navigation";
+@use "elements/_footer";
+@use "elements/_article";
+@use "elements/_carrousel";
+@use "elements/_formulaire";
+@use "elements/_index";
+@use "elements/_section";
 
-@import "font/_font";
+@use "font/_font";
 
 // COMPONENTS
-@import "components/indicateur";
+@use "components/indicateur";
 
 
 // UTILITIES
-@import "utilities/print";
-@import "utilities/media";
+@use "utilities/print";
+@use "utilities/media";
 
 
 
