--- a/scss/elements/_body.scss
+++ b/scss/elements/_body.scss
@@ -1,10 +1,14 @@
-body {
-  font-weight: $fw-regular;
-  font-family: $text;
-  font-size: rem(16);
-  color: $dark-grey;
+@use "../settings/colors";
+@use "../settings/fonts";
+@use "../tools/fonctions";
 
-  background: $white;
+body {
+  font-weight: fonts.$fw-regular;
+  font-family: fonts.$text;
+  font-size: fonctions.rem(16);
+  color: colors.$dark-grey;
+
+  background: colors.$white;
 
   position: relative;
 }
