--- a/scss/elements/_footer.scss
+++ b/scss/elements/_footer.scss
@@ -1,12 +1,17 @@
+@use "../settings/colors";
+@use "../settings/dimensions";
+@use "../settings/global";
+@use "../tools/fonctions";
+
 footer {
-  color: $white;
-  background-color: $dark-grey;
+  color: colors.$white;
+  background-color: colors.$dark-grey;
 
   padding: 100px 0;
 }
 
 footer h1, footer h2, footer h3, footer h4, footer h5, footer h6 {
-  color: $white;
+  color: colors.$white;
 }
 
 footer > .wrapper > div {
@@ -35,7 +40,7 @@ footer form:after {
   width: 200px;
   height: 3px;
   border-radius: 100px;
-  background-color: $white;
+  background-color: colors.$white;
   opacity: 0.35;
   content: "";
   display: block;
@@ -51,19 +56,19 @@ footer form input {
 }
 
 footer .footer-social .footer-social-networks a {
-  font-size: rem(36);
+  font-size: fonctions.rem(36);
 
-  color: $white;
+  color: colors.$white;
 
   margin-left: 36px;
 
-  transition: $global-transition;
+  transition: global.$global-transition;
 }
 
 footer .footer-social .footer-social-networks a:hover {
-  color: $green;
+  color: colors.$green;
 
-  transition: $global-transition;
+  transition: global.$global-transition;
 }
 
 // SECTION DES BADGES
@@ -89,7 +94,7 @@ footer .badge {
 }
 
 .footer-copyrights div:last-of-type {
-  font-size: rem(12);
+  font-size: fonctions.rem(12);
 }
 
 .button-newsletter {
@@ -99,10 +104,10 @@ footer .badge {
   top: 4px;
   right: 1px;
   
-  font-size: rem(40);
-  color: $green;
+  font-size: fonctions.rem(40);
+  color: colors.$green;
 
-  transition: $global-transition;
+  transition: global.$global-transition;
 }
 
 .button-newsletter:hover {
@@ -110,7 +115,7 @@ footer .badge {
 
   opacity: 0.4;
 
-  transition: $global-transition;
+  transition: global.$global-transition;
 }
 
 .button-newsletter:focus {
@@ -123,7 +128,7 @@ footer .badge {
 
 
 
-@media screen and (max-width: $vw-middle) {
+@media screen and (max-width: dimensions.$vw-middle) {
 
   footer .footer-social {
     flex-direction: column;
@@ -146,7 +151,7 @@ footer .badge {
   }
 }
 
-@media screen and (max-width: $vw-middle-small) {
+@media screen and (max-width: dimensions.$vw-middle-small) {
 
   footer {
     padding-top: 40px;
@@ -176,7 +181,7 @@ footer > .wrapper > div {
 
 }
 
-@media screen and (max-width: $vw-small) {
+@media screen and (max-width: dimensions.$vw-small) {
 
   .button-newsletter {
     right: 0px;
