--- a/scss/elements/_links.scss
+++ b/scss/elements/_links.scss
@@ -1,25 +1,29 @@
+@use "../settings/colors";
+@use "../settings/fonts";
+@use "../settings/global";
+
 
 //LIENS RÉGULIERS
 
 a {
   text-decoration: none;
 
-  color: $blue;
+  color: colors.$blue;
 
-  transition: $global-transition;
+  transition: global.$global-transition;
 }
 
 a:hover {
-  color: $green;
+  color: colors.$green;
 
-  transition: $global-transition;
+  transition: global.$global-transition;
 }
 
 //BOUTONS
 
 .btn {
-  font-family: $title;
-  font-weight: $fw-black;
+  font-family: fonts.$title;
+  font-weight: fonts.$fw-black;
   text-transform: uppercase;
   border: solid 1px;
 
@@ -37,46 +41,46 @@ a:hover {
 }
 
 .btn-green {
-  color: $dark-grey;
-  border-color: $green;
-  background-color: $green;
+  color: colors.$dark-grey;
+  border-color: colors.$green;
+  background-color: colors.$green;
 
-  transition: $global-transition;
+  transition: global.$global-transition;
 }
 
 .btn-green:hover {
-  background-color: $white;
-  border-color: $white;
-  color: $green;
+  background-color: colors.$white;
+  border-color: colors.$white;
+  color: colors.$green;
 
-  transition: $global-transition;
+  transition: global.$global-transition;
 }
 
 .btn-green-border {
-  color: $dark-grey;
-  border-color: $green;
-  background-color: $white;
+  color: colors.$dark-grey;
+  border-color: colors.$green;
+  background-color: colors.$white;
 
-  transition: $global-transition;
+  transition: global.$global-transition;
 }
 
 .btn-green-border:hover {
-  color: $dark-grey;
-  background-color: $green;
+  color: colors.$dark-grey;
+  background-color: colors.$green;
 
-  transition: $global-transition;
+  transition: global.$global-transition;
 }
 
 .btn-white-border {
-  color: $white;
-  border-color: $white;
+  color: colors.$white;
+  border-color: colors.$white;
 
-  transition: $global-transition;
+  transition: global.$global-transition;
 }
 
 .btn-white-border:hover {
-  color: $yellow;
-  border-color: $yellow;
+  color: colors.$yellow;
+  border-color: colors.$yellow;
 
-  transition: $global-transition;
+  transition: global.$global-transition;
 }
