--- a/scss/elements/_ticket.scss
+++ b/scss/elements/_ticket.scss
@@ -1,3 +1,8 @@
+@use "../settings/colors";
+@use "../settings/dimensions";
+@use "../settings/fonts";
+@use "../tools/fonctions";
+
 .ticket-section {
   display: flex;
   flex-wrap: wrap;
@@ -15,7 +20,7 @@
 
   text-align: center;
 
-  background-color: $white;
+  background-color: colors.$white;
 
   -webkit-box-shadow: 0px 8px 24px -2px rgba(0, 0, 0, 0.25);
   -moz-box-shadow: 0px 8px 24px -2px rgba(0, 0, 0, 0.25);
@@ -25,9 +30,9 @@
 }
 
 .ticket-titre {
-  font-family: $title;
-  font-size: rem(24);
-  font-weight: $fw-black;
+  font-family: fonts.$title;
+  font-size: fonctions.rem(24);
+  font-weight: fonts.$fw-black;
   text-transform: uppercase;
 
   display: block;
@@ -36,11 +41,11 @@
 }
 
 .ticket-prix {
-  font-family: $title;
-  font-size: rem(60);
-  font-weight: $fw-black;
+  font-family: fonts.$title;
+  font-size: fonctions.rem(60);
+  font-weight: fonts.$fw-black;
 
-  color: $green;
+  color: colors.$green;
 
   display: block;
 
@@ -50,7 +55,7 @@
 .ticket p:after {
   width: 170px;
   height: 1px;
-  background-color: $dark-grey;
+  background-color: colors.$dark-grey;
   opacity: 0.35;
   content: "";
   display: block;
@@ -88,7 +93,7 @@
   width: 400px;
   height: 560px;
 
-  color: $white;
+  color: colors.$white;
 
   background: #00b7e0; /* Old browsers */
   background: -moz-linear-gradient(45deg, #00b7e0 23%, #40e0d0 96%); /* FF3.6-15 */
@@ -98,24 +103,24 @@
 }
 
 .ticket-special .ticket-titre {
-  font-size: rem(30);
+  font-size: fonctions.rem(30);
 }
 
 .ticket-special .ticket-prix {
-  font-size: rem(72);
+  font-size: fonctions.rem(72);
 
-  color: $yellow;
+  color: colors.$yellow;
 }
 
 .ticket-special p:after {
-  background-color: $white
+  background-color: colors.$white
 }
 
 .ticket-special .ticket-bottom .disclaimer {
   opacity: 1;
 }
 
-@media screen and (max-width: $vw-middle) {
+@media screen and (max-width: dimensions.$vw-middle) {
 
   .ticket-special {
     margin: 20px 0;
@@ -127,7 +132,7 @@
 
 }
 
-@media screen and (max-width: $vw-middle-small) {
+@media screen and (max-width: dimensions.$vw-middle-small) {
 
   .ticket {
     width: 100%;
