--- a/scss/settings/_dimensions.scss
+++ b/scss/settings/_dimensions.scss
@@ -14,5 +14,6 @@ $tablette-padding-side: 15px;
 $vw-small: 320px;
 $vw-middle-small: 500px;
 $vw-middle: 768px;
+$vw-middle-large: 960px;
 $vw-large: $max-width;
 
