--- a/scss/elements/_header.scss
+++ b/scss/elements/_header.scss
@@ -14,6 +14,11 @@ header {
 
 .nav-mobile {
   display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 
   z-index: 9999;
   color: colors.$white;
@@ -134,6 +139,13 @@ input[id="show-menu"]:checked ~ ul {
   transition: global.$global-transition;
 }
 
+@media screen and (max-width: dimensions.$vw-middle-large) {
+
+  .btn-billet {
+    display: none;
+  }
+
+}
 
 @media screen and (max-width: dimensions.$vw-middle) {
 
