--- a/style.css
+++ b/style.css
@@ -1122,6 +1122,10 @@ p {
   line-height: 1.5rem;
 }
 
+.lock-scroll {
+  overflow: hidden;
+}
+
 .wrapper {
   margin: auto;
   padding: 0 15px;
@@ -1142,6 +1146,11 @@ header {
 
 .nav-mobile {
   display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   z-index: 9999;
   color: #fff;
   padding: 20px 0;
@@ -1241,6 +1250,11 @@ header .menu a:hover {
   transition: all 300ms ease-in-out;
 }
 
+@media screen and (max-width: 960px) {
+  .btn-billet {
+    display: none;
+  }
+}
 @media screen and (max-width: 768px) {
   header .menu ul {
     display: none;
