--- a/scss/elements/_invites.scss
+++ b/scss/elements/_invites.scss
@@ -1,18 +1,12 @@
 @use "../settings/dimensions";
 
 .invites .invites-liste {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 48px 16px;
 }
 
 .invites .invites-liste > div {
-  width: 22.5%;
-  max-width: 270px;
-
-
-  margin-bottom: 32px;
-
   position: relative;
 }
 
@@ -37,23 +31,22 @@
 
 @media screen and (max-width: dimensions.$vw-middle) {
 
-  .invites .invites-liste > div {
-    width: 46.6666%;
-    max-width: 335px;
-
-    margin-bottom: 10%;
+  .invites .invites-liste {
+    grid-template-columns: repeat(2, 1fr);
   }
 
 }
 
 @media screen and (max-width: dimensions.$vw-middle-small) {
 
-    .invites .invites-liste > div {
-      width: 100%;
-      max-width: 100%;
+  .invites .invites-liste {
+    grid-template-columns: repeat(1, 1fr);
+  }
 
-      height: auto;
-    }
+  .invites .invites-liste > div {
+    width: 75%;
+    margin: auto;
+  }
 
 }
 
