Removed unnecessary padding for the banner

--- a/style.css
+++ b/style.css
@@ -608,7 +608,6 @@ h4, h5, h6 {
 @media screen and (max-width: 500px) {
   .banner .banner-content {
     width: 100%;
-    padding-top: 80px;
   }
   .banner-description p {
     display: none;
@@ -1157,7 +1156,7 @@ header {
   background: -webkit-linear-gradient(45deg, #00b7e0 23%, #40e0d0 96%); /* Chrome10-25,Safari5.1-6 */
   background: linear-gradient(45deg, #00b7e0 23%, #40e0d0 96%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#00b7e0", endColorstr="#40e0d0", GradientType=1); /* IE6-9 fallback on horizontal gradient */
-  height: 100vh;
+  height: 100%;
 }
 
 header > div > nav > div > a > .logo, .nav-mobile .logo {
